tests/snapshots/snapshots/snapshots__snapshots__json_output__close_json_output.snap
---
source: tests/snapshots/json_output.rs
expression: normalize_json(&json)
---
[
  {
    "id": "ISSUE_ID",
    "title": "Issue to close",
    "status": "closed",
    "closed_at": "TIMESTAMP",
    "close_reason": "Done"
  }
]
