tests/snapshots/snapshots/snapshots__snapshots__json_output__comments_add_json_output.snap
---
source: tests/snapshots/json_output.rs
expression: normalize_json(&add_json)
---
{
  "id": "ISSUE_ID",
  "issue_id": "ISSUE_ID",
  "author": "ACTOR",
  "text": "First comment",
  "created_at": "TIMESTAMP"
}
