tests/snapshots/snapshots/snapshots__snapshots__json_output__count_grouped_by_type_json_output.snap
---
source: tests/snapshots/json_output.rs
expression: normalize_json(&json)
---
{
  "total": 3,
  "groups": [
    {
      "group": "bug",
      "count": 1
    },
    {
      "group": "feature",
      "count": 1
    },
    {
      "group": "task",
      "count": 1
    }
  ]
}
