tests/snapshots/snapshots/snapshots__snapshots__json_output__count_grouped_json_output.snap
---
source: tests/snapshots/json_output.rs
expression: normalize_json(&json)
---
{
  "total": 2,
  "groups": [
    {
      "group": "in_progress",
      "count": 1
    },
    {
      "group": "open",
      "count": 1
    }
  ]
}
