tests/snapshots/snapshots/snapshots__snapshots__json_output__info_error_json_output.snap
---
source: tests/snapshots/json_output.rs
expression: json
---
{
  "error": "no beads directory found"
}
